# iot

./: .gitignore  CMakeLists.txt  iot.tex  push  sdkconfig  sdkconfig.ci.sse  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  idf_component.yml  main.c  quote.c  quote.h  quotes.txt  server.h  voltage.c  wifi.c
main/embed/: body.js  index.html
